fix(rest): tsc --buileが通らないのでコメントアウト

--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -22,9 +22,9 @@
     {
       "path": "./tsconfig.build.esm.json"
     },
-    {
-      "path": "./tsconfig.build.umd.json"
-    },
+    // {
+    //   "path": "./tsconfig.build.umd.json"
+    // },
     {
       "path": "./tsconfig.typecheck.json"
     }
