fix: add publint and fix pacakge.json errors

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -14,8 +14,10 @@
     "build:rollup_umd_prod": "rollup -c --environment BUILD:production",
     "build:vite_umd_dev": "BUILD=development vite build",
     "build:vite_umd_prod": "BUILD=production vite build",
-    "lint": "eslint . --max-warnings 0",
-    "fix": "pnpm lint --fix",
+    "lint": "run-s lint:*",
+    "lint:eslint": "eslint . --max-warnings 0",
+    "lint:package": "publint",
+    "fix": "pnpm lint:eslint --fix",
     "clean": "rimraf lib esm umd",
     "test": "jest",
     "test:ci": "jest --runInBand",
