--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -60,7 +60,8 @@
     "rollup-plugin-ecma-version-validator": "^0.2.13",
     "rollup-plugin-license": "^3.6.0",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-polyfill-node": "^0.13.0"
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "vite": "^5.4.15"
   },
   "dependencies": {
     "core-js": "^3.41.0",
@@ -69,8 +70,7 @@
     "openapi-fetch": "^0.13.5",
     "openapi-typescript": "^7.6.1",
     "openapi-typescript-helpers": "^0.0.15",
-    "undici": "^7.4.0",
-    "vite": "^5.4.14"
+    "undici": "^7.4.0"
   },
   "publishConfig": {
     "access": "public"
