set type field to package.json

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -21,6 +21,7 @@
     "name": "Cybozu, Inc.",
     "url": "https://cybozu.co.jp"
   },
+  "type": "commonjs",
   "exports": {
     ".": {
       "types": {
