--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -25,17 +25,17 @@
   "exports": {
     ".": {
       "node": {
-        "import": "./lib/src/index.js",
-        "require": "./lib/src/index.js",
-        "default": "./lib/src/index.js"
+        "import": "./lib/index.js",
+        "require": "./lib/index.cjs",
+        "default": "./lib/index.js"
       },
-      "browser": "./lib/src/index.browser.js"
+      "browser": "./lib/index.browser.js"
     },
     "./package.json": "./package.json"
   },
-  "main": "lib/src/index.js",
-  "module": "esm/src/index.js",
-  "types": "lib/src/index.d.ts",
+  "main": "lib/index.cjs",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "CHANGELOG.md",
     "esm",
@@ -45,6 +45,8 @@
   "scripts": {
     "prebuild": "pnpm clean",
     "build": "tsc --build --force && pnpm postbuild",
+    "build:vite": "vite build",
+    "build:tsup": "tsup",
     "postbuild": "node scripts/copy-schemas.js",
     "build:rollup_umd_dev": "rollup -c --environment BUILD:development",
     "build:rollup_umd_prod": "rollup -c --environment BUILD:production",
@@ -83,7 +85,9 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
+    "tsup": "^8.4.0",
     "vite": "^5.4.15",
+    "vite-plugin-dts": "^4.5.3",
     "vitest": "^2.1.9"
   },
   "engines": {
