--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
+    "composite": false,
     "module": "node16",
     "moduleResolution": "node16",
     "outDir": "./lib",
-    "rootDir": "./",
+    "rootDir": "./src",
     "resolveJsonModule": true,
     "noEmit": true,
     "lib": [
@@ -14,19 +15,22 @@
       "node_modules/@types",
       "../../node_modules/@types",
       "types"
-    ],
+    ]
   },
   "files": [],
   "references": [
-    {
-      "path": "./tsconfig.build.lib.json"
-    },
-    {
-      "path": "./tsconfig.build.esm.json"
-    },
+//    {
+//      "path": "./tsconfig.build.lib.json"
+//    },
+//    {
+//      "path": "./tsconfig.build.esm.json"
+//    },
     // {
     //   "path": "./tsconfig.build.umd.json"
     // },
+     {
+       "path": "./tsconfig.build.tsup.json"
+     },
     {
       "path": "./tsconfig.typecheck.json"
     }
