--- a/packages/rest/tsconfig.build.tsup.json
+++ b/packages/rest/tsconfig.build.tsup.json
@@ -1,10 +1,15 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "node16",
+    "moduleResolution": "node16",
     "target": "es2022",
     "lib": ["es2022", "dom"],
     //    "module": "es2022",
-    "outDir": "./esm"
+    "outDir": "./esm",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "strict": true
   },
   "include": ["src/**/*", "package.json"],
   "exclude": ["src/**/__tests__/*", "src/**/*.test.ts"]
