--- a/packages/rest/tsconfig.typecheck.json
+++ b/packages/rest/tsconfig.typecheck.json
@@ -1,4 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "package.json"]
+  //  "compilerOptions": { "moduleResolution": "bundler" },
+  "include": [
+    "src/**/*",
+    "vite.config.mts",
+    "vite.config.umd.mts",
+    "package.json"
+  ]
 }
