build(rest): migrate to esm

--- a/packages/rest/tsconfig.build.esm.json
+++ b/packages/rest/tsconfig.build.esm.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "es2022",
     "lib": ["es2022", "dom"],
-    "module": "es2022",
+    //    "module": "es2022",
     "noEmit": false,
     "outDir": "./esm"
   },
