--- a/packages/rest/tsconfig.typecheck.json
+++ b/packages/rest/tsconfig.typecheck.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "package.json"]
+  "compilerOptions": { "module": "esnext", "moduleResolution": "bundler" },
+  "include": ["src/**/*", "vite.config.ts", "package.json"]
 }
