--- a/packages/rest/tsconfig.build.lib.json
+++ b/packages/rest/tsconfig.build.lib.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
+    "moduleResolution": "node10",
     "target": "es2018",
     "lib": ["es2018", "dom"],
     "noEmit": false,
