--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
+    "module": "node16",
+    "moduleResolution": "node16",
     "outDir": "./lib",
     "rootDir": "./",
     "resolveJsonModule": true,
