--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -56,9 +56,9 @@
     "lint:eslint": "eslint . --max-warnings 0",
     "lint:package": "publint",
     "start": "tsc --build --force --watch",
-    "test": "jest",
-    "test:ci": "jest --runInBand",
-    "test:e2e": "jest --config=jest.e2e.config.ts"
+    "test": "vitest",
+    "test:ci": "vitest",
+    "test:e2e": "vitest --config=vitest.e2e.config.ts"
   },
   "dependencies": {
     "core-js": "^3.41.0",
@@ -77,14 +77,14 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/rollup-plugin-node-builtins": "^2.1.5",
     "@types/rollup-plugin-node-globals": "^1.4.5",
-    "jest": "^29.7.0",
     "rollup": "^4.39.0",
     "rollup-plugin-ecma-version-validator": "^0.2.13",
     "rollup-plugin-license": "^3.6.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "vite": "^5.4.15"
+    "vite": "^5.4.15",
+    "vitest": "^2.1.9"
   },
   "engines": {
     "node": ">=18"
