--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -21,14 +21,9 @@
     "name": "Cybozu, Inc.",
     "url": "https://cybozu.co.jp"
   },
-  "type": "commonjs",
+  "type": "module",
   "exports": {
     ".": {
-      "types": {
-        "import": "./esm/src/index.d.ts",
-        "require": "./lib/src/index.d.ts",
-        "default": "./lib/src/index.d.ts"
-      },
       "node": {
         "import": "./lib/src/index.js",
         "require": "./lib/src/index.js",
@@ -61,9 +56,9 @@
     "lint:eslint": "eslint . --max-warnings 0",
     "lint:package": "publint",
     "start": "tsc --build --force --watch",
-    "test": "jest",
-    "test:ci": "jest --runInBand",
-    "test:e2e": "jest --config=jest.e2e.config.js"
+    "test": "vitest",
+    "test:ci": "vitest",
+    "test:e2e": "vitest --config=vitest.e2e.config.ts"
   },
   "dependencies": {
     "core-js": "^3.41.0",
@@ -80,12 +75,16 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-terser": "^0.4.4",
+    "@types/rollup-plugin-node-builtins": "^2.1.5",
+    "@types/rollup-plugin-node-globals": "^1.4.5",
     "rollup": "^4.39.0",
     "rollup-plugin-ecma-version-validator": "^0.2.13",
     "rollup-plugin-license": "^3.6.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "vite": "^5.4.15"
+    "vite": "^5.4.15",
+    "vitest": "^2.1.9"
   },
   "engines": {
     "node": ">=18"
