--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -25,17 +25,17 @@
   "exports": {
     ".": {
       "node": {
-        "import": "./lib/index.js",
-        "require": "./lib/index.cjs",
-        "default": "./lib/index.js"
+        "import": "./lib/es/index.js",
+        "require": "./lib/cjs/index.js",
+        "default": "./lib/es/index.js"
       },
-      "browser": "./lib/index.browser.js"
+      "browser": "./lib/es/index.browser.js"
     },
     "./package.json": "./package.json"
   },
-  "main": "lib/index.cjs",
-  "module": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/es/index.js",
+  "types": "lib/es/index.d.ts",
   "files": [
     "CHANGELOG.md",
     "esm",
@@ -45,11 +45,11 @@
   "scripts": {
     "prebuild": "pnpm clean",
     "build": "tsc --build --force && pnpm postbuild",
-    "build:vite": "vite build",
-    "build:tsup": "tsup",
     "postbuild": "node scripts/copy-schemas.js",
     "build:rollup_umd_dev": "rollup -c --environment BUILD:development",
     "build:rollup_umd_prod": "rollup -c --environment BUILD:production",
+    "build:tsup": "tsup",
+    "build:vite": "vite build",
     "build:vite_umd_dev": "BUILD=development vite build",
     "build:vite_umd_prod": "BUILD=production vite build",
     "clean": "rimraf lib esm umd",
@@ -88,6 +88,7 @@
     "tsup": "^8.4.0",
     "vite": "^5.4.15",
     "vite-plugin-dts": "^4.5.3",
+    "vite-plugin-static-copy": "^2.3.0",
     "vitest": "^2.1.9"
   },
   "engines": {
