--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -44,23 +44,22 @@
   ],
   "scripts": {
     "prebuild": "pnpm clean",
-    "build": "tsc --build --force && pnpm postbuild",
-    "postbuild": "node scripts/copy-schemas.js",
-    "build:rollup_umd_dev": "rollup -c --environment BUILD:development",
-    "build:rollup_umd_prod": "rollup -c --environment BUILD:production",
-    "build:tsup": "tsup",
-    "build:vite": "vite build",
-    "build:vite_umd_dev": "BUILD=development vite build",
-    "build:vite_umd_prod": "BUILD=production vite build",
+    "build": "pnpm run \"/^build:.*/\"",
+    "build:lib": "vite build",
+    "build:umd": "vite build --config vite.config.umd.ts",
     "clean": "rimraf lib esm umd",
     "fix": "pnpm lint:eslint --fix",
+    "license": "license-manager extract -w '@kintone/rest' --cwd ../../ --config ../../license-manager.config.js",
     "lint": "run-s lint:*",
     "lint:eslint": "eslint . --max-warnings 0",
     "lint:package": "publint",
     "start": "tsc --build --force --watch",
     "test": "vitest",
     "test:ci": "vitest",
-    "test:e2e": "vitest --config=vitest.e2e.config.ts"
+    "test:e2e": "vitest --config=vitest.e2e.config.ts",
+    "watch": "pnpm run \"/^watch:.*/\"",
+    "watch:lib": "pnpm run build:lib --watch",
+    "watch:umd": "pnpm run build:umd --mode development --watch"
   },
   "dependencies": {
     "core-js": "^3.41.0",
@@ -72,6 +71,8 @@
     "undici": "^7.4.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.26.10",
+    "@cybozu/license-manager": "^1.2.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.3",
     "@rollup/plugin-json": "^6.1.0",
@@ -79,6 +80,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/rollup-plugin-node-builtins": "^2.1.5",
     "@types/rollup-plugin-node-globals": "^1.4.5",
+    "@vitejs/plugin-legacy": "^6.0.2",
     "rollup": "^4.39.0",
     "rollup-plugin-ecma-version-validator": "^0.2.13",
     "rollup-plugin-license": "^3.6.0",
@@ -88,6 +90,7 @@
     "tsup": "^8.4.0",
     "vite": "^5.4.15",
     "vite-plugin-dts": "^4.5.3",
+    "vite-plugin-license": "^0.0.1",
     "vite-plugin-static-copy": "^2.3.0",
     "vitest": "^2.1.9"
   },
